# Cloth-Simulation

./: README.md
work/: CMakeLists.txt
work/res/shaders/: VUW.fs.glsl  VUW.vs.glsl  simple.fs.glsl  simple.vs.glsl
work/src/: CMakeLists.txt  bending_constraint.cpp  bending_constraint.hpp  cloth.cpp  cloth.hpp  collision_constraint.cpp  collision_constraint.hpp  constraint.hpp  distance_constraint.cpp  distance_constraint.hpp  entity.hpp  grid_maker.hpp  grid_maker_interface.cpp  grid_maker_interp.cpp  main.cpp  particle.hpp  pbd.cpp  pbd.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.hpp
work/src/cgra/: imgui_impl_glfw_gl3.cpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  wavefront.cpp  wavefront.hpp
